// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing AdminNav component should render as expected 1`] = `
<ul
  className="right-menu not-mobile not-mobile-right"
>
  <li
    className="admin"
  >
    <div>
      <a
        className="nav-item"
        onClick={[Function]}
      >
        <span
          id="display-username"
        >
          Welcome  
          username
        </span>
        <span>
          <i
            className="icon ion-android-arrow-dropdown"
          />
        </span>
      </a>
    </div>
    <div
      className="drop-down-menu undefined"
    >
      <Link
        replace={false}
        to="/dashboard"
      >
        Dashboard
      </Link>
      <a
        id="logout"
        onClick={[Function]}
      >
        Logout
      </a>
    </div>
  </li>
</ul>
`;

exports[`Testing GuestNav component should render as expected 1`] = `
<ul
  className="right-menu  not-mobile-right"
>
  <li>
    <Link
      className="nav-item"
      replace={false}
      to="/login"
    >
      Login
    </Link>
  </li>
  <li>
    <Link
      className="nav-item"
      replace={false}
      to="/signup"
    >
      Sign Up
    </Link>
  </li>
</ul>
`;

exports[`Testing NavHeader component should render as expected 1`] = `
<div
  className="nav-header nav-header-shadow not-mobile-left"
>
  <Link
    replace={false}
    to="/"
  >
    M-Tracker
  </Link>
  <span
    className="mobile toggle-menu"
    onClick={[Function]}
  >
    <i
      className="icon ion-android-menu"
    />
  </span>
  <div
    className="clearfix"
  />
</div>
`;

exports[`Testing UsersNav component should render as expected 1`] = `
<ul
  className="right-menu not-mobile not-mobile-right"
>
  <li
    className="request"
    key="request"
  >
    <div>
      <a
        className="nav-item"
        onClick={[Function]}
      >
        Requests
        <span>
          <i
            className="icon ion-android-arrow-dropdown"
          />
        </span>
      </a>
    </div>
    <div
      className="drop-down-menu undefined"
    >
      <Link
        replace={false}
        to="/users/requests/create"
      >
        Create Request
      </Link>
      <Link
        replace={false}
        to="/users/requests/all"
      >
        View Requests
      </Link>
    </div>
  </li>
  <li
    className="user"
    key="user"
  >
    <div>
      <a
        className="nav-item"
        onClick={[Function]}
      >
        <span
          id="display-username"
        >
          Welcome  
          username
        </span>
        <span>
          <i
            className="icon ion-android-arrow-dropdown"
          />
        </span>
      </a>
    </div>
    <div
      className="drop-down-menu undefined"
    >
      <a
        id="logout"
        onClick={[Function]}
      >
        Logout
      </a>
    </div>
  </li>
</ul>
`;
